# expense-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.cursor/rules/: project-rules.md  python-best-practices.md
docs/: database_migrations.md
docs/implemention/: postgres.md
expense-analyzer/: pyproject.toml
expense_analyzer/: __init__.py  expense_analyzer.py
expense_analyzer/categorizers/: __init__.py  simple_categorizer.py
expense_analyzer/database/: __init__.py  connection.py  models.py  repository.py
expense_analyzer/database/migrations/: env.py
expense_analyzer/database/migrations/versions/: 5fa38fda2f87_initial_database_schema.py  (+1 more)
expense_analyzer/database/repositories/: __init__.py  category_repository.py  transaction_category_repository.py  transaction_repository.py  transaction_view_repository.py
expense_analyzer/embedder/: __init__.py  transaction_embedder.py
expense_analyzer/file_readers/: __init__.py  base_file_reader.py  boa_file_reader.py  boa_pdf_reader.py
expense_analyzer/models/: __init__.py  boa_transaction.py  expense_report_data.py  reports.py  source.py  transaction.py  transaction_categories.py
expense_analyzer/report_generators/: __init__.py  base_generator.py  console_generator.py  markdown_generator.py
expense_analyzer/services/: __init__.py  expense_service.py  report_service.py
expense_analyzer/utils/: logging_config.py
init-scripts/: 01-enable-pgvector.sql  02-seed-categories.sql
tests/database/: test_connection.py  test_models.py
tests/database/repository/: __init__.py  test_category_repository.py  test_transaction_category_repository.py  test_transaction_repository.py
tests/services/: test_expense_service.py  test_report_service.py
