[tool.poetry]
name = "expense-analyzer"
version = "0.1.0"
description = "A workflow for gathering, categorizing, and summarizing expenses, then creating a budget based on that."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "expense_analyzer"}]

[tool.poetry.dependencies]
python = "^3.9"  # Or your specific Python version requirement
psycopg2-binary = "^2.9"
pandas = "^2.0"
openai = "^1.0"  # Replace with your actual LLM library
matplotlib = "^3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 