[tool.poetry]
name = "expense-analyzer"
version = "0.1.0"
description = "A workflow for gathering, categorizing, and summarizing expenses, then creating a budget based on that."
authors = ["Nick Pisarski <nick.pisarski@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "expense_analyzer"}]

[tool.poetry.dependencies]
python = "^3.9"  # Or your specific Python version requirement
psycopg2-binary = "^2.9"
pandas = "^2.0"
openai = "^1.0"  # Replace with your actual LLM library
matplotlib = "^3.7"
pdfplumber = "^0.11.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.11.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120  # Default, but you can change it
target-version = ['py39']  # Target Python versions (adjust as needed)
include = '\.pyi?$'  # Files to include (usually .py and .pyi)
# Add any other Black options here.  See Black's documentation for details.
# Example:
# skip-string-normalization = true
